# group-editor-bot

./: .gitignore  .goreleaser.yaml  MANIFEST.in  README.md  go.mod  go.sum  group-editor-bot.go  pyproject.toml
.github/workflows/: ci.yml
src/group_editor_bot/: durian-realtime-editor-v4.0.4.xdc  hooks.py  pyinfra.py
src/group_editor_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/group_editor_bot/pyinfra_assets/: group-editor-bot.service.j2  setup-venv.sh
tests/: conftest.py  test_hooks.py
